<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/nav_city" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/nav_about" />
    </group>


</menu>