<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/activity_background"
              android:orientation="vertical"
              android:padding="@dimen/activity_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/fragment_about_textview_eula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:foreground="@drawable/link_background_selector"
        android:paddingBottom="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:text="@string/eula_highlight"
        android:textColor="@color/primary_text"
        android:textColorLink="@color/colorPrimary"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/license_list_title"
        android:textColor="@color/primary_text"
        android:textSize="16sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_about_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>