<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/fragment_feedback_card_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_feedback_height"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="0dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_city_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_image_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/feedback_send_city_feedback"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/card_feedback_text_size"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/fragment_feedback_card_map"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_feedback_height"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="0dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_map_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_image_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/feedback_send_map_feedback"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/card_feedback_text_size"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/fragment_feedback_card_general"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_feedback_height"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="0dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_send_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_image_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/feedback_send_email"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/card_feedback_text_size"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>